[Win] Warning fixes. https://bugs.webkit.org/show_bug.cgi?id=160803

Reviewed by Brent Fulgham.

Initialize local variables.

* jit/JIT.cpp:
(JSC::JIT::compileWithoutLinking):
* runtime/Error.cpp:
(JSC::addErrorInfoAndGetBytecodeOffset):


Canonical link: https://commits.webkit.org/178945@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204446 268f45cc-cd09-0410-ab3c-d52691b4dbfc