Source/JavaScriptCore/runtime/Error.cpp
@@ -143,7 +143,7 @@ bool addErrorInfoAndGetBytecodeOffset(ExecState* exec, VM& vm, JSObject* obj, bo
 
         ASSERT(exec == vm.topCallFrame || exec == exec->lexicalGlobalObject()->globalExec() || exec == exec->vmEntryGlobalObject()->globalExec());
 
-        StackFrame* firstNonNativeFrame;
+        StackFrame* firstNonNativeFrame = nullptr;
         for (unsigned i = 0 ; i < stackTrace.size(); ++i) {
             firstNonNativeFrame = &stackTrace.at(i);
             if (!firstNonNativeFrame->isNative())
